added navbar section

--- a/index.html
+++ b/index.html
@@ -8,16 +8,42 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
 
+    <!-- font Awesome Link -->
+    <script src="https://kit.fontawesome.com/c5fa10a8f0.js" crossorigin="anonymous"></script>
+
     <!-- Daisy UI and Tailwind CSS CDN Link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
-    <h1 class="text-6xl text-black font-bold">Hello Programmer!!</h1>
+<body class="font-mulish">
     <!-- Header Section -->
     <header>
-
+        <!-- Navbar Section -->
+        <section class="container mt-5">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <a class="text-3xl md:text-6xl font-bold">ReTro</a>
+                </div>
+                <div class="navbar-end flex gap-1 md:gap-3">
+                    <div class="btn btn-circle h-10 w-10">
+                        <img class="w-5" src="images/icons/home.svg" alt="">
+                    </div>
+                    <div class="btn btn-circle h-10 w-10">
+                        <img class="w-5" src="images/icons/edit.svg" alt="">
+                    </div>
+                    <div class="btn btn-circle h-10 w-10">
+                        <img class="w-5" src="images/icons/profile.svg" alt="">
+                    </div>
+                    <div class="btn btn-circle h-10 w-10">
+                        <img class="w-5" src="images/icons/flag.svg" alt="">
+                    </div>
+                    <div class="flex">
+                        <h1 class="btn md:text-lg md:font-medium rounded-3xl text-white bg-[#797DFC]">Sign In</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
 
     <!-- Main Section -->
