--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <!-- Header Section -->
     <header>
         <!-- Navbar Section -->
-        <section class="container mt-5">
-            <div class="navbar bg-base-100">
+        <section class="container md:m-5">
+            <div class="navbar bg-base-100 flex justify-between">
                 <div class="navbar-start">
-                  <a class="text-3xl md:text-6xl font-bold">ReTro</a>
+                  <a><img class="w-16 md:w-32" src="images/logo.png" alt=""></a>
                 </div>
-                <div class="navbar-end flex gap-1 md:gap-3">
+                <div class="flex gap-1 md:gap-3">
                     <div class="btn btn-circle h-10 w-10">
                         <img class="w-5" src="images/icons/home.svg" alt="">
                     </div>
@@ -43,7 +43,43 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Banner Section -->
+            <div class="mt-3 carousel h-[300px] md:h-[500px] rounded-3xl bg-[#12132D]">
+                <div id="" class="carousel-item relative w-full">
+                  <img class="" src="images/bgbanner.png" class="w-full" />
+                  <div class="absolute flex justify-around transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <div class="text-white space-y-5 p-2">
+                        <p class="text-2xl md:text-6xl font-medium md:font-bold">Welcome to the <br><span class="text-blue-800">ReTro</span> Forum</p>
+                        <p class="w-4/5 md:w-full text-sm md:text-xl">Share your favorite opinion and win and wp forum coffee mug!</p>
+                        <div class="bg-white rounded-full flex justify-between w-56 md:w-full p-1">
+                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-36 md:w-96 rounded-full p-3">
+                            <button class="whitespace-normal md:h-14 w-16 md:w-24 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
+                        </div>
+                    </div>
+                    <div class="bg-white text-black rounded-2xl p-2 md:p-5 flex-col-1 h-56 space-y-5 md:text-xl md:font-semibold">
+                        <div class="flex gap-3 md:gap-10 justify-between">
+                            <p>Registered Users</p>
+                            <p>13</p>
+                        </div>
+                        <div class="flex gap-3 md:gap-10 justify-between">
+                            <p>Forum</p>
+                            <p>05</p>
+                        </div>
+                        <div class="flex gap-3 md:gap-10 justify-between">
+                            <p>Topics</p>
+                            <p>02</p>
+                        </div>
+                        <div class="flex gap-3 md:gap-10 justify-between">
+                            <p>Replies</p>
+                            <p>12</p>
+                        </div>
+                    </div>
+                  </div>
+                </div> 
+            </div>
         </section>
+
     </header>
 
     <!-- Main Section -->
