added lets discuss section

--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
                 </div> 
             </div>
         </section>
-
     </header>
 
     <!-- Main Section -->
     <main>
-
+        <!-- Let’s Discuss -->
+        <section class="container text-center mt-10">
+            <h1 class="text-6xl font-bold mb-3">Let's Discuss</h1>
+            <p class="text-xl font-semibold w-4/5 mx-auto">"Retro Forum" could refer to a variety of things, depending on the context. Online Community, Physical Gathering Place, Organization or Movement, so without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
+        </section>
     </main>
 
     <!-- Footer Section -->
