Added Join Our Forum

--- a/index.html
+++ b/index.html
@@ -86,7 +86,19 @@
         <!-- Let’s Discuss -->
         <section class="container text-center mt-10">
             <h1 class="text-6xl font-bold mb-3">Let's Discuss</h1>
-            <p class="text-lg md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
+            <p class="text-lg md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
+        </section>
+
+        <!-- Join Our Forum Section-->
+        <section class="container bg-[#12132D] rounded-3xl p-5 md:p-10 text-white md:m-5 flex justify-between items-center">
+            <div class="space-y-6">
+                <h2 class="text-3xl md:text-6xl font-medium md:font-bold">Join Our Forum</h2>
+                <p class="text-base md:text-lg md:font-medium w-full md:w-3/4">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app. </p>
+                <button class="btn rounded-full md:text-lg md:font-semibold text-white border-none bg-[#5155cc]">Registered Now</button>
+            </div>
+            <div>
+                <img class="" src="images/joinforum.png" alt="">
+            </div>
         </section>
     </main>
 
