--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Header Section -->
     <header>
         <!-- Navbar Section -->
-        <section class="container md:m-5">
+        <section class="container md:m-4">
             <div class="navbar bg-base-100 flex justify-between">
                 <div class="navbar-start">
                   <a><img class="w-16 md:w-32" src="images/logo.png" alt=""></a>
@@ -49,28 +49,28 @@
                 <div id="" class="carousel-item relative w-full">
                   <img class="" src="images/bgbanner.png" class="w-full" />
                   <div class="absolute flex justify-around transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <div class="text-white space-y-5 p-2">
+                    <div class="text-white space-y-5">
                         <p class="text-2xl md:text-6xl font-medium md:font-bold">Welcome to the <br><span class="text-blue-800">ReTro</span> Forum</p>
                         <p class="w-4/5 md:w-full text-sm md:text-xl">Share your favorite opinion and win and wp forum coffee mug!</p>
-                        <div class="bg-white rounded-full flex justify-between w-56 md:w-full p-1">
-                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-36 md:w-96 rounded-full p-3">
-                            <button class="whitespace-normal md:h-14 w-16 md:w-24 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
+                        <div class="bg-white rounded-full flex justify-between w-56 md:w-full">
+                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-36 md:w-96 text-black rounded-full p-3">
+                            <button class=" md:h-14 w-16 md:w-48 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
                         </div>
                     </div>
-                    <div class="bg-white text-black rounded-2xl p-2 md:p-5 flex-col-1 h-56 space-y-5 md:text-xl md:font-semibold">
-                        <div class="flex gap-3 md:gap-10 justify-between">
+                    <div class="bg-white text-black rounded-2xl p-2 md:p-5 flex-col-1 h-52 space-y-5 md:text-xl md:font-semibold">
+                        <div class="flex gap-2 md:gap-10 justify-between">
                             <p>Registered Users</p>
                             <p>13</p>
                         </div>
-                        <div class="flex gap-3 md:gap-10 justify-between">
+                        <div class="flex gap-2 md:gap-10 justify-between">
                             <p>Forum</p>
                             <p>05</p>
                         </div>
-                        <div class="flex gap-3 md:gap-10 justify-between">
+                        <div class="flex gap-2 md:gap-10 justify-between">
                             <p>Topics</p>
                             <p>02</p>
                         </div>
-                        <div class="flex gap-3 md:gap-10 justify-between">
+                        <div class="flex gap-2 md:gap-10 justify-between">
                             <p>Replies</p>
                             <p>12</p>
                         </div>
@@ -85,8 +85,8 @@
     <main>
         <!-- Let’s Discuss -->
         <section class="container text-center mt-10">
-            <h1 class="text-6xl font-bold mb-3">Let's Discuss</h1>
-            <p class="text-lg md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
+            <h1 class="text-3xl md:text-6xl font-bold mb-3">Let's Discuss</h1>
+            <p class="text-base p-2 md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
         </section>
 
         <!-- Join Our Forum Section-->
@@ -99,6 +99,12 @@
             <div>
                 <img class="" src="images/joinforum.png" alt="">
             </div>
+        </section>
+
+        <!-- Latest Posts Section -->
+        <section class="container text-center mt-14">
+            <h1 class="text-3xl md:text-6xl font-medium md:font-bold">Latest Posts</h1>
+            <p class="text-2xl font-medium mt-3 w-3/4 mx-auto">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
     </main>
 
