Added footer section

--- a/index.html
+++ b/index.html
@@ -104,13 +104,30 @@
         <!-- Latest Posts Section -->
         <section class="container text-center mt-14">
             <h1 class="text-3xl md:text-6xl font-medium md:font-bold">Latest Posts</h1>
-            <p class="text-2xl font-medium mt-3 w-3/4 mx-auto">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
+            <p class="text-2xl font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
     </main>
 
     <!-- Footer Section -->
-    <footer>
-
+    <footer class="container m-3 rounded-xl footer footer-center p-10 bg-[#dbdced] text-">
+        <aside>
+            <h4 class="text-5xl font-bold">
+                <img src="images/logo.png" alt="">
+            </h4> 
+            <p class="w-2/3">Let's Post Retro Forum" is the premier destination for enthusiasts of all things retro! Dive into discussions spanning vintage fashion, classic cars, mid-century design, and more. </p>
+        </aside> 
+        <nav>
+            <div class="grid grid-flow-col gap-4">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+        </nav>
+        <hr class="w-full h-[2px] bg-[#949393]">
+        <div>
+            <p>2017, All Rights Reserved.</p>
+        </div>
     </footer>
 
     <!-- JavaScript -->
