--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p class="text-2xl md:text-6xl font-medium md:font-bold">Welcome to the <br><span class="text-blue-800">ReTro</span> Forum</p>
                         <p class="w-4/5 md:w-full text-sm md:text-xl">Share your favorite opinion and win and wp forum coffee mug!</p>
                         <div class="bg-white rounded-full flex justify-between w-56 md:w-full">
-                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-36 md:w-96 text-black rounded-full p-3">
+                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-40 md:w-96 text-black rounded-full p-3">
                             <button class=" md:h-14 w-16 md:w-48 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
                         </div>
                     </div>
@@ -103,13 +103,13 @@
 
         <!-- Latest Posts Section -->
         <section class="container text-center mt-14">
-            <h1 class="text-3xl md:text-6xl font-medium md:font-bold">Latest Posts</h1>
-            <p class="text-2xl font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
+            <h1 class="text-3xl md:text-6xl font-bold">Latest Posts</h1>
+            <p class="md:text-2xl md:font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
     </main>
 
     <!-- Footer Section -->
-    <footer class="container m-3 rounded-xl footer footer-center p-10 bg-[#dbdced] text-">
+    <footer class="container md:m-3 rounded-xl footer footer-center p-10 bg-[#dbdced]">
         <aside>
             <h4 class="text-5xl font-bold">
                 <img src="images/logo.png" alt="">
