Added icon name when cursor on icon, show icon name

--- a/index.html
+++ b/index.html
@@ -25,19 +25,35 @@
                 <div class="navbar-start">
                   <a><img class="w-16 md:w-32" src="images/logo.png" alt=""></a>
                 </div>
-                <div class="flex gap-1 md:gap-3">
-                    <div class="btn btn-circle h-10 w-10">
+                <div class="flex gap-1 md:gap-3">  
+                    <div class="btn btn-circle relative  group overflow-hidden">
                         <img class="w-5" src="images/icons/home.svg" alt="">
+                        <div class="absolute flex justify-center items-center -bottom-20 group-hover:bottom-3">
+                            <button class="bg-black text-white p-1 text-xs rounded-md">Home</button>
+                        </div>
                     </div>
-                    <div class="btn btn-circle h-10 w-10">
+
+                    <div class="btn btn-circle relative  group overflow-hidden">
                         <img class="w-5" src="images/icons/edit.svg" alt="">
+                        <div class="absolute flex justify-center items-center -bottom-20 group-hover:bottom-3">
+                            <button class="bg-black text-white p-1 text-xs rounded-md">Edit</button>
+                        </div>
                     </div>
-                    <div class="btn btn-circle h-10 w-10">
-                        <img class="w-5" src="images/icons/profile.svg" alt="">
+
+                    <div class="btn btn-circle relative  group overflow-hidden">
+                        <img class="w-5" src="images/icons/add.svg" alt="">
+                        <div class="absolute flex justify-center items-center -bottom-20 group-hover:bottom-3">
+                            <button class="bg-black text-white p-1 text-xs rounded-md">Add</button>
+                        </div>
                     </div>
-                    <div class="btn btn-circle h-10 w-10">
+
+                    <div class="btn btn-circle relative  group overflow-hidden">
                         <img class="w-5" src="images/icons/flag.svg" alt="">
+                        <div class="absolute flex justify-center items-center -bottom-20 group-hover:bottom-3">
+                            <button class="bg-black text-white p-1 text-xs rounded-md">Flag</button>
+                        </div>
                     </div>
+
                     <div class="flex">
                         <h1 class="btn md:text-lg md:font-medium rounded-3xl text-white bg-[#797DFC]">Sign In</h1>
                     </div>
