--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
             <h1 class="text-3xl md:text-6xl font-bold">Latest Posts</h1>
             <p class="md:text-2xl md:font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
+        <section class="container">
+            <div id="" class="">
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--  -->
     </main>
 
     <!-- Footer Section -->
