--- a/index.html
+++ b/index.html
@@ -122,17 +122,26 @@
             <h1 class="text-3xl md:text-6xl font-bold">Latest Posts</h1>
             <p class="md:text-2xl md:font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
-        <section class="container">
+        <section class="container m-5 mb-10">
             <div id="" class="">
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                       <img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
                     </figure>
-                    <div class="card-body items-center text-center">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                    <div class="card-body space-y-3">
+                      <h2 class="flex gap-1"> 
+                        <span><img src="images/icons/calender.svg" alt=""></span>29 January 2024
+                      </h2>
+                      <p class="text-xl font-medium">Gaming Enthusiast Expert in Play</p>
+                      <p>Leading gaming expert with a wealth of knowledge and passion for all things gaming</p>
+                      <div class="flex gap-5">
+                        <div>
+                            <img src="images/profile.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-xl font-bold">Cameron Williamson</h2>
+                            <p>Unknown</p>
+                        </div>
                       </div>
                     </div>
                 </div>
