--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p class="md:text-2xl md:font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
         <section class="container m-5 mb-10">
-            <div id="" class="">
+            <div id="latest-post-card" class="flex-col-1 md:flex gap-5 justify-center items-center">
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                       <img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
@@ -145,6 +145,7 @@
                       </div>
                     </div>
                 </div>
+                
             </div>
         </section>
 
