Updated Responsive Layout for Any devices

--- a/index.html
+++ b/index.html
@@ -123,11 +123,10 @@
             <p class="md:text-2xl md:font-medium mt-3 w-4/5 mx-auto mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
         <section class="container md:m-3 mb-10">
-            <div id="latest-post-card" class="space-y-10 md:space-y-0 flex-col-1 mx-auto md:flex justify-between items-center mb-10">
+            <div id="latest-post-card" class="grid md:grid-cols-3 place-items-center space-y-10 md:space-y-0 mb-10">
                 
             </div>
         </section>
-
         <!--  -->
     </main>
 
