--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
             <div class="flex gap-10 bg-slate-200 p-10 rounded-2xl">
                 <div class="h-20 w-20 bg-slate-300 flex justify-center items-center relative rounded-xl">
                     <img src="images/icons/logo-fb.png" alt="">
-                    <div class="absolute h-5 w-5 bg-red-700 -top-1 -right-1 rounded-full">
+                    <div class="hidden absolute h-5 w-5 bg-[#FF3434] -top-1 -right-1 rounded-full border-2 border-white">
+                    </div>
+                    <div class="absolute h-5 w-5 bg-[#10B981] -top-1 -right-1 rounded-full border-2 border-white">
                     </div>
                 </div>
                 <div class="space-y-4">
@@ -141,8 +143,8 @@
 
                 </div>
             </div>
-            <div class="bg-slate-200 p-3 rounded-xl">
-                <div class="flex justify-between ">
+            <div class="bg-slate-200 p-5 rounded-xl">
+                <div class="flex gap-20">
                     <h2>Title</h2>
                     <div class="flex gap-x-2">
                         <p class="text-[#10B981]"><i class="fa-solid fa-check-double"></i></p>
