Updated Respnsive Layout

--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
             <h1 class="text-3xl md:text-6xl font-bold mb-3">Let's Discuss</h1>
             <p class="text-base p-2 md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
         </section>
-        <section class="container m-5 mx-auto flex justify-around gap-10">
-            <div class="flex gap-10 bg-slate-200 p-10 rounded-2xl">
-                <div class="h-20 w-20 bg-slate-300 flex justify-center items-center relative rounded-xl">
-                    <img src="images/icons/logo-fb.png" alt="">
+        <!-- Discuss Section Cards -->
+        <section class="container m-5 mx-auto flex-col-1 md:flex justify-around gap-10 space-y-6 md:space-y-0">
+            <div class="flex gap-10 bg-slate-200 p-3 md:p-10 rounded-2xl">
+                <div class="h-20 w-40 md:w-20 bg-slate-300 flex justify-center items-center relative rounded-xl">
+                    <img class="" src="images/icons/logo-fb.png" alt="">
                     <div class="hidden absolute h-5 w-5 bg-[#FF3434] -top-1 -right-1 rounded-full border-2 border-white">
                     </div>
                     <div class="absolute h-5 w-5 bg-[#10B981] -top-1 -right-1 rounded-full border-2 border-white">
@@ -143,6 +144,7 @@
 
                 </div>
             </div>
+
             <div class="bg-slate-200 p-5 rounded-xl">
                 <div class="flex gap-20">
                     <h2>Title</h2>
