Added Allposts Cards

--- a/index.html
+++ b/index.html
@@ -105,52 +105,59 @@
             <p class="text-base p-2 md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
         </section>
         <!-- Discuss Section Cards -->
-        <section class="container m-5 mx-auto flex-col-1 md:flex justify-around gap-10 space-y-6 md:space-y-0">
-            <div class="flex gap-10 bg-slate-200 p-3 md:p-10 rounded-2xl">
-                <div class="h-20 w-40 md:w-20 bg-slate-300 flex justify-center items-center relative rounded-xl">
-                    <img class="" src="images/icons/logo-fb.png" alt="">
-                    <div class="hidden absolute h-5 w-5 bg-[#FF3434] -top-1 -right-1 rounded-full border-2 border-white">
+        <section id="" class="container m-5 mx-auto flex-col-1 md:flex justify-around gap-10 space-y-6 md:space-y-0">
+            <div class="space-y-5 ">
+                <div class="flex gap-10 bg-slate-200 p-3 md:p-10 rounded-2xl">
+                    <div class="h-20 w-40 md:w-20 bg-slate-300 flex justify-center items-center relative rounded-xl">
+                        <img class="" src="images/icons/logo-fb.png" alt="">
+                        <div class="hidden absolute h-5 w-5 bg-[#FF3434] -top-1 -right-1 rounded-full border-2 border-white">
+                        </div>
+                        <div class="absolute h-5 w-5 bg-[#10B981] -top-1 -right-1 rounded-full border-2 border-white">
+                        </div>
                     </div>
-                    <div class="absolute h-5 w-5 bg-[#10B981] -top-1 -right-1 rounded-full border-2 border-white">
+                    <div class="space-y-4">
+                        <div class="flex gap-x-20">
+                            <p>#Music</p>
+                            <p>Author : Awlad Hossain</p>
+                        </div>
+                        <h2 class="text-2xl font-bold">10 Kids Unaware of Their Halloween Costume</h2>
+                        <p class="text-lg font-medium">It's one thing to subject yourself to ha Halloween costume mishap because, hey that's your prerogative</p>
+                        <hr class="w-full h-[2px] bg-[#949393]">
+                        <div class="flex justify-between">
+                            <div class="flex justify-between gap-x-10">
+                                <div class="gap-2 flex">
+                                    <h5><i class="fa-regular fa-message"></i></h5>
+                                    <p>560</p>
+                                </div>
+                                <div class="gap-2 flex">
+                                    <h5><i class="fa-regular fa-eye"></i></h5>
+                                    <p>560</p>
+                                </div>
+                                <div class="gap-2 flex">
+                                    <h5><i class="fa-regular fa-clock"></i></h5>
+                                    <p>5 min</p>
+                                </div>
+                            </div>
+                            <div class="btn w-12 h-12 rounded-full bg-[#10B981] flex justify-center items-center">
+                                <div class="text-white w-10"><i class="fa-solid fa-envelope-open-text"></i></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="space-y-4">
-                    <div class="flex gap-x-20">
-                        <p>#Music</p>
-                        <p>Author : Awlad Hossain</p>
-                    </div>
-                    <h2 class="text-2xl font-bold">10 Kids Unaware of Their Halloween Costume</h2>
-                    <p class="text-lg font-medium">It's one thing to subject yourself to ha Halloween costume mishap because, hey that's your prerogative</p>
-                    <hr class="w-full h-[2px] bg-[#949393]">
-                    <div class="flex justify-between">
-                        <div class="flex justify-between gap-x-10">
-                            <div class="gap-2 flex">
-                                <h5><i class="fa-regular fa-message"></i></h5>
-                                <p>560</p>
-                            </div>
-                            <div class="gap-2 flex">
-                                <h5><i class="fa-regular fa-eye"></i></h5>
-                                <p>560</p>
-                            </div>
-                            <div class="gap-2 flex">
-                                <h5><i class="fa-regular fa-clock"></i></h5>
-                                <p>5 min</p>
-                            </div>
-                        </div>
-                        <div class="btn w-12 h-12 rounded-full bg-[#10B981] flex justify-center items-center">
-                            <div class="text-white w-10"><i class="fa-solid fa-envelope-open-text"></i></div>
-                        </div>
-                    </div>
 
-                </div>
+                
             </div>
 
-            <div class="bg-slate-200 p-5 rounded-xl">
+            <div class="p-5 rounded-xl shadow-sm shadow-[#c2e5d9]">
                 <div class="flex gap-20">
                     <h2>Title</h2>
                     <div class="flex gap-x-2">
                         <p class="text-[#10B981]"><i class="fa-solid fa-check-double"></i></p>
-                        <p>Mark as read (4)</p>
+                        <div class="flex gap-2">
+                            <p>Mark</p> 
+                            <p>as</p> 
+                            <p>read(4)</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -173,12 +180,11 @@
             <h1 class="text-3xl md:text-6xl font-bold">Latest Posts</h1>
             <p class="text-base p-2 md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">Let's Post Retro Forum is your haven for exploring vintage aesthetics, from fashion to design! Join us as we delve into the timeless allure of retro style, discussing everything from classic cars to mid-century modern decor. Connect with like-minded individuals and share your passion for all things retro!</p>
         </section>
+        <!-- Cards -->
         <section class="container md:m-3 mb-10">
-            <div id="latest-post-card" class="grid md:grid-cols-3 place-items-center space-y-10 md:space-y-0 mb-10">
-                
+            <div id="latest-post-card" class="grid md:grid-cols-3 place-items-center space-y-10 md:space-y-0 mb-10">  
             </div>
         </section>
-        <!--  -->
     </main>
 
     <!-- Footer Section -->
