--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <p class="text-2xl md:text-6xl font-medium md:font-bold">Welcome to the <br><span class="text-blue-800">ReTro</span> Forum</p>
                         <p class="w-4/5 md:w-full text-sm md:text-xl">Share your favorite opinion and win and wp forum coffee mug!</p>
                         <div class="bg-white rounded-full flex justify-between w-56 md:w-full">
-                            <input type="text" name="" id="" placeholder="Search here..." class="md:h-14 w-40 md:w-96 text-black rounded-full p-3">
-                            <button class=" md:h-14 w-16 md:w-48 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
+                            <input type="text" name="" id="search-input" placeholder="Search here..." class="md:h-14 w-40 md:w-96 text-black rounded-full p-3">
+                            <button id="search-btn" class=" md:h-14 w-16 md:w-48 btn rounded-full bg-[#5155cc] md:text-xl md:font-semibold text-white">Search</button>
                         </div>
                     </div>
                     <div class="bg-white text-black rounded-2xl p-2 md:p-5 flex-col-1 h-52 space-y-5 md:text-xl md:font-semibold">
@@ -110,7 +110,7 @@
                
             </div>
 
-            <div class="p-5 rounded-xl shadow-sm shadow-[#c2e5d9]">
+            <div id="show-read-marks" class="p-5 rounded-xl flex-col shadow-sm shadow-[#c2e5d9] space-y-1">
                 <div class="flex gap-20">
                     <h2>Title</h2>
                     <div class="flex gap-x-2">
@@ -122,6 +122,10 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="flex justify-between h-12 bg-slate-200 p-2 rounded-lg shadow-sm shadow-black">
+                    <h1>hello</h1>
+                    <p>400</p>
+                </div> -->
             </div>
         </section>
 
