--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                
             </div>
 
-            <div id="show-read-marks" class="p-5 rounded-xl flex-col shadow-sm shadow-[#c2e5d9] space-y-1">
-                <div class="flex gap-20">
+            <div id="show-read-marks" class="p-5 h-1/2 rounded-xl flex-col shadow-sm shadow-[#c2e5d9] space-y-4">
+                <div class="flex gap-20 h-16 items-center p-2 text-lg font-medium rounded-xl bg-white">
                     <h2>Title</h2>
                     <div class="flex gap-x-2">
                         <p class="text-[#10B981]"><i class="fa-solid fa-check-double"></i></p>
@@ -122,10 +122,14 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="flex justify-between h-12 bg-slate-200 p-2 rounded-lg shadow-sm shadow-black">
+                <div class="flex justify-between h-12 bg-slate-100 p-2 rounded-lg shadow-sm shadow-black">
                     <h1>hello</h1>
                     <p>400</p>
-                </div> -->
+                </div>
+                <div class="flex justify-between h-12 bg-slate-100 p-2 rounded-lg shadow-sm shadow-black">
+                    <h1>hello</h1>
+                    <p>400</p>
+                </div>
             </div>
         </section>
 
