added toggle spinner for show loading

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         <!-- Discuss Section Cards -->
         <section class="container mx-auto flex-col-1 md:flex justify-around space-y-6 md:space-y-0">
             <div id="all-posts-cards" class="space-y-5">
-               
+                <div id="loading-spinner" class="text-center hidden">
+                    <span class="loading loading-spinner loading-lg"></span>
+                </div>
             </div>
 
             <div id="show-read-marks" class="p-5 h-1/2 rounded-xl flex-col shadow-sm shadow-[#c2e5d9] space-y-4">
@@ -121,14 +123,6 @@
                             <p>read(4)</p>
                         </div>
                     </div>
-                </div>
-                <div class="flex justify-between h-12 bg-slate-100 p-2 rounded-lg shadow-sm shadow-black">
-                    <h1>hello</h1>
-                    <p>400</p>
-                </div>
-                <div class="flex justify-between h-12 bg-slate-100 p-2 rounded-lg shadow-sm shadow-black">
-                    <h1>hello</h1>
-                    <p>400</p>
                 </div>
             </div>
         </section>
