Updated title Section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="flex gap-2">
                             <p>Mark</p> 
                             <p>as</p> 
-                            <p>read(4)</p>
+                            <p>read(<span id="read-count" class="text-[#ff3535]">0</span>)</p>
                         </div>
                     </div>
                 </div>
