Alhamdulillah! Done. But Read as marks does not work properly, next try to my best!!!

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h1 class="text-3xl md:text-6xl font-bold mb-3">Let's Discuss</h1>
             <p class="text-base p-2 md:text-xl font-medium md:font-semibold mx-auto w-full md:w-4/5 mb-10">"Retro Forum" could refer to a variety of things, depending on the context: Online Community, Physical Gathering Place, Organization or Movement. So without further context, it's difficult to determine the specific meaning of "Retro Forum".</p>
 
-            <!-- Loading Sinner -->
+            <!--Toggle: Loading Sinner -->
             <div id="toggle-spinner" class="text-center hidden">
                 <span class="loading loading-spinner loading-lg"></span>
             </div>
